<resources>
    <string name="app_name">第5课堂</string>
    <string name="title_home">首页</string>
    <string name="title_shishuo">师说</string>
    <string name="title_kebiao">课表</string>
    <string name="title_message">消息</string>
    <string name="title_my">我</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="visitor_login">游客登录</string>
    <string name="back_home">返回</string>
    <string name="hint_code">请输入验证码</string>
    <string name="send_phone_code">发送验证码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="toast_phone_notnull">请填写电话号码</string>
    <string name="toast_pass_notnull">请填写密码</string>
    <string name="toast_pass_six">请输入6位以上密码</string>
    <string name="toast_pass_notseem">两次密码不一致</string>
    <string name="toast_phone_yes">请输入正确电话号码</string>
    <string name="toast_realname_yes">请输入真实姓名</string>
    <string name="hint_password_second">请输入新密码</string>
    <string name="yes">确定</string>
    <string name="title_forgetPassword">找回密码</string>
    <string name="toast_username_notnull">请填写用户名</string>
    <string name="home_lianxi">快速练习</string>
    <string name="next">开始练习</string>
    <string name="toast_select_section">请选择章节</string>
    <string name="toast_select_student">请选择学生</string>
    <string name="finish_exam">结束练习</string>
    <string name="toast_select_option">请选择选项</string>
    <string name="submit_exam">提交答卷</string>
    <string name="next_answer">下一题</string>
    <string name="dialog_finish_exam">结束当前练习？</string>
    <string name="again_think">继续答题</string>
    <string name="continue_exam">继续答题</string>
    <string name="total_score">正确率</string>
    <string name="percent">%</string>
    <string name="exam_success_finish">恭喜通过练习</string>
    <string name="share">分享</string>
    <string name="finish_exam_ac">练习报告</string>
    <string name="chart_name">测试饼状图</string>
    <string name="my_error_exam">我的错题</string>
    <string name="my_exam_record">做题记录</string>
    <string name="my_setting">设置</string>
    <string name="my_userinfo">个人信息</string>
    <string name="t_search">做题查询</string>
    <string name="search_student">请输入搜索内容</string>
    <string name="signout">退出登录</string>
    <string name="pre_answer">上一题</string>
    <string name="finish_look">结束</string>
    <string name="datika">答题卡</string>
    <string name="no_data">暂无</string>
    <string name="my_teacher">我的老师</string>
    <string name="my_student">我的学生</string>
    <string name="confirm_hint_password">请确认密码</string>
    <string name="invitation_code_edit">请输入邀请码</string>
    <string name="title_banji">班级</string>
    <string name="hint_classname">请输入班级名称</string>
    <string name="dialog_tishi">提示</string>
    <string name="my_parent">我的家长</string>
    <string name="max_voice_record">最多只能录三条哦~</string>
    <string name="max_voice_time">最长只可录60s</string>
    <string name="pressSpake">按住说话</string>
    <string name="pressSpakeHint">每条语音不超过60s</string>
    <string name="delete">删除</string>
    <string name="title_analysis">分析</string>
    <string name="about_us">       上海森盛信息科技有限公司成立于2011年，专注于应用信息化技术，以高科技产品为教育行业提供研发、销售和服务的公司，是新高考改革所带来3+3新教学模式的创新者与领导者。 公司始终秉承创造力、沟通力和稳步发展的企业精神，以“专心服务教育，立足一线需求，创新做精产品”为宗旨，不断研发新技术、不断创新，以领先的技术，专业的精神迅速扩展市场，以其优质的产品和完善的服务赢得广大用户的赞誉。 公司通过多年的努力，围绕国家对新高考改革的要求，以及众多高中学校和教育行政部门的实际需求《第5课堂》APP等具有自主知识产权的，切合3+3新教学模式下高中学校和教育局实际需求、功能完备的信息化教学管理系统。</string>
    <string name="about_us_copyright">Copyright © 2017 上海森盛信息科技有限公司</string>
    <string name="dadian">喜欢就打赏一下！</string>

</resources>
